src/styles/style.scss
$font-bold: 500;
$font-mono: 'Source Code Pro', monospace;
$font-sans-serif: -apple-system,
  BlinkMacSystemFont,
  "Segoe UI",
  Roboto,
  Helvetica,
  Arial,
  sans-serif,
  "Apple Color Emoji",
  "Segoe UI Emoji",
  "Segoe UI Symbol";

$blue: #3498db;
$bg-gray: #E9EBF1;
$gray: #9f9f9f;
$default-text: #484868;
$royal-blue: #5985F7;

@import 'partials/animations';
@import 'partials/reset';
@import 'partials/code';

body {
  background: darken($bg-gray, 10%);
  color: $default-text;
  font-family: $font-sans-serif;
}

.container {
  max-width: 730px;
  margin: 0 auto;
  padding: 0 1rem;
}

.grid {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(310px, 1fr));
  grid-gap: 15px;
  padding: 2rem 1rem;

  .item {
    padding: 1.3rem;
    font-size: 14px;
    background-color: #fff;
    border-radius: 3px;
    box-shadow: 0 3px 20px -10px rgba($default-text, 0.7);
    opacity: 0;

    &.no-pad {
      padding: 0;
    }
  }

  .span-row {
    grid-column-start: 1; 
    grid-column-end: -1; 
  }

  .span-2 {
    grid-column: span 2;
  }

  .span-2-vertical {
    grid-row: span 2;
  }

}

.wrap {
  transition: padding 0.4s ease;
  display: flex;
  justify-content: space-between;
  flex-direction: column;
  min-height: 100vh;
  position: relative;
  background: $bg-gray;

  & > div {
    width: 100%;
  }

  .hide-interactive {
    display: inherit;
  }

  .show-interactive {
    display: none;
  }

  &.interactive-mode {
    padding-left: 27%;

    .hide-interactive {
      display: none;
    }

    .show-interactive {
      display: inherit;
    }
  }

  &.crash {
		overflow:hidden;
		height:100vh;
		animation: zoom-out 4s forwards;
    position: relative;
		z-index: 1000;
	}
}

header {
  display: flex;
  align-items: center;
  justify-content: space-between;

  h1 {
    font-weight: normal;
    font-size: 1.5rem;
    margin-bottom: 5px;
  }

  p {
    color: $gray;
  }
}

footer {
  font-size: 0.8rem;
  padding: 1rem 0 2rem;
  color: $gray;

  & > div {
    display: flex;
    width: 100%;
  }

  .copyright {
    flex-grow: 1;
  }

  a {
    font-weight: $font-bold;
    text-decoration: none;
    color: $gray;
    opacity: 0.8;

    &:not(:first-child) {
      margin-left: 7px;
    }

    &:hover {
      opacity: 1;
    }
  }
}

.content {
  h3 {
    font-size: 1.3rem;
    margin-bottom: 10px;
    display: flex;
    align-items: center;
  }

  p {
    line-height: 130%;
  }

  p:not(:last-child) {
    margin-bottom: 0.8rem;
  }

  .project {
    margin-top: 1rem;

    li {
      margin: 0px -10px;

      a {
        padding: 5px 10px;
        display: block;
        border-radius: 2px;

        &:hover {
          background: transparentize($bg-gray, 0.6);
        }
      }
    }

    .project__title {
      font-weight: $font-bold;
      display: block;
      line-height: 130%;
    }

    .project__subtitle {
      color: $gray;
    }

    a {
      color: $default-text;
      text-decoration: none;
    }
  }
}

.badge {
  font-size: 0.75rem;
  background: $royal-blue;
  border-radius: 50px;
  padding: 0.3rem 0.7rem;
  color: white;
  font-weight: $font-bold;
  margin-right: 8px;
}

.link {
  color: inherit;
  text-decoration: none;
  color: $royal-blue;

  &:hover {
    text-decoration: underline;
  }
}

.round-link {
  border-radius: 50px;
  padding: 6px 16px;
  font-size: 0.9rem;
  font-weight: $font-bold;
  text-decoration: none;
  color: $gray;

  &.active {
    background: $royal-blue;
    color: white;
  }

  &:not(.active):hover {
    background: $bg-gray;
  }
}

#console-selector {
  font-family: $font-mono;
  position: fixed;
  width: 27%;
  max-width: 450px;
  opacity: 0;
  transform: translateX(-200px);
  transition: transform 0.4s ease, opacity 0.4s ease;
  left: 0;

  &.interactive-mode {
    transform: translateX(0);
    opacity: 1;
  }
}

.console {
  background-color: #303E4E;
  padding: 25px;
  height: 100vh;
  overflow-y: scroll;
  color: white;
  font-size: 0.75rem;

  .console__command-list {
    list-style: none;
    margin: 0;
    padding: 0;

    .console__item {
      padding: inherit;
      line-height: 130%;

      &:not(.console__item--command) {
        margin-left: 2ch;
      }

      &.console__item--error {
        color: #e74c3c;
      }

      &.console__item--response {
        color: lighten(#303E4E, 35%);
      }

      &.console__item--bold {
        font-weight: $font-bold;
        color: lighten(#303E4E, 45%);
      }

      &.console__item--warning {
        color: #e67e22;
      }
    }
  }

  .console__prompt {
    background-color: transparent;
    font-family: $font-mono;
    outline: none;
    border: none;
    font-size: 0.75rem;
    margin: 0;
    padding: 0;
    color: white;
    width: 90%;
    line-height: 100%;
  }
}

.trash {
  position: fixed;
  top: 100%;
  left: 50%;
  transform: translateX(-50%);
  width: 50vw;
  height: 50vw;
  transform-origin: center;
  visibility: hidden;

  img {
    position: absolute;
    top: 0;
    left: 0;
    width: 50vw;
    height: auto;
  }

  &.crash {
    animation: trash-can 4s;
    visibility: visible;

    &.trash__front {
      z-index: 9000;
    }
  }
}

@media (max-width: 768px) {
  .mobile-hide {
    display: none;
  }
}

